# local-tech-doc-app-normal-rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  vector.py
