[project]
name = "local-ai-agent-crick-expert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]
